--- a/Assignment-4/app/src/main/res/layout/activity_main.xml
+++ b/Assignment-4/app/src/main/res/layout/activity_main.xml
@@ -5,28 +5,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    android:padding="16dp"
+    android:background="#111111"
+    android:padding="20dp"
     tools:context=".MainActivity">
 
-    <TextView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
         android:id="@+id/total_question"
-        android:text="Total Questions"
-        android:textColor="#FFFFFF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:text="Questions Left"
+        android:textColor="#FFFFFF"
         android:textSize="20dp" />
 
     <TextView
+        android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="this will be the question"
-        android:textColor="@color/white"
-
-        android:id="@+id/question"
-        android:textSize="24dp"
+        android:layout_above="@id/choices"
+        android:text="This will be the question"
         android:textAlignment="center"
-        android:layout_above="@id/choices"/>
+        android:textColor="@android:color/white"
+        android:textSize="24dp" />
 
     <LinearLayout
         android:id="@+id/choices"
@@ -36,51 +36,48 @@
         android:orientation="vertical">
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/Answer_A"
-            android:layout_margin="5dp"
-            android:backgroundTint="@color/white"
-            android:text ="Answer A"
-            android:textColor="@color/black"
-            />
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:backgroundTint="@android:color/white"
+            android:text="Answer A"
+            android:textColor="@android:color/black" />
+
+        <Button
             android:id="@+id/Answer_B"
-            android:layout_margin="5dp"
-            android:backgroundTint="@color/white"
-            android:text ="Answer B"
-            android:textColor="@color/black"
-            />
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:backgroundTint="@android:color/white"
+            android:text="Answer B"
+            android:textColor="@android:color/black" />
+
+        <Button
             android:id="@+id/Answer_C"
-            android:layout_margin="5dp"
-            android:backgroundTint="@color/white"
-            android:text ="Answer C"
-            android:textColor="@color/black"
-            />
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Answer_D"
             android:layout_margin="5dp"
-            android:backgroundTint="@color/white"
-            android:text ="Answer D"
-            android:textColor="@color/black"
-            />
+            android:backgroundTint="@android:color/white"
+            android:text="Answer C"
+            android:textColor="@android:color/black" />
+
+        <Button
+            android:id="@+id/Answer_D"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:backgroundTint="@android:color/white"
+            android:text="Answer D"
+            android:textColor="@android:color/black" />
     </LinearLayout>
-    
+
     <Button
+        android:id="@+id/Submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Submit"
-        android:text="Submit"
         android:layout_below="@id/choices"
         android:layout_marginTop="5dp"
-        />
-
+        android:text="Submit" />
 
 </RelativeLayout>
